syntax = "proto3";

package proto;

option go_package ="github.com/BM-laoli/go-gin-example/proto";

service SearchService {
    rpc Search(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
    string request = 1;
}

message SearchResponse {
    string response = 1;
}

